// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SearchCardConnected component should render 1`] = `
<View
  cardColor="#00676D"
  style={
    Object {
      "backgroundColor": "#00676D",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "__typename": "ImageMediaSource",
              "cache": "force-cache",
              "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Dd3a96243-2558-4c04-bf41-3aadcf41771f",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      />
      <BVLinearGradient
        colors={
          Array [
            1711276032,
            2147483648,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1,
          }
        }
        locations={
          Array [
            0,
            1,
          ]
        }
        overlayColor="#000000"
        overlayType="gradient-bottom"
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "bottom": 0,
          "paddingBottom": 32,
          "paddingHorizontal": 24,
          "paddingVertical": 16,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#F8F7F4",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        How to lead people to Jesus
      </Text>
      <View
        hasSummary={true}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingTop": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 16,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#F8F7F4",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            Love compels a mother to lose all dignity in public as she screams the name of her lost child.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The SearchCardConnected component should render without image 1`] = `
<View
  cardColor="#00676D"
  style={
    Object {
      "backgroundColor": "#00676D",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <BVLinearGradient
        colors={
          Array [
            1711276032,
            2147483648,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1,
          }
        }
        locations={
          Array [
            0,
            1,
          ]
        }
        overlayColor="#000000"
        overlayType="gradient-bottom"
        startPoint={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "bottom": 0,
          "paddingBottom": 32,
          "paddingHorizontal": 24,
          "paddingVertical": 16,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#F8F7F4",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        How to lead people to Jesus
      </Text>
      <View
        hasSummary={true}
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingTop": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 16,
            }
          }
        >
          <Text
            bold={false}
            italic={false}
            numberOfLines={2}
            style={
              Object {
                "color": "#F8F7F4",
                "fontFamily": "InterUI-Regular",
                "fontSize": 16,
                "lineHeight": 26,
              }
            }
          >
            Love compels a mother to lose all dignity in public as she screams the name of her lost child.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
